fix themis logo *again*

--- a/templates/index.html
+++ b/templates/index.html
@@ -582,7 +582,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="https://cdn.discordapp.com/attachments/1359093144376840212/1391111028552765550/image.png?ex=686caeda&amp;is=686b5d5a&amp;hm=2f7a401945da09ff951d426aaf651ade57dad6b6a52c567713aacf466c214a85&amp;" alt="Themis">
+                <img src="https://imgur.com/a/wQQuKem" alt="Themis">
                 Themis
             </div>
 
