fix themis logo *again* again

--- a/templates/index.html
+++ b/templates/index.html
@@ -582,7 +582,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="https://imgur.com/a/wQQuKem" alt="Themis">
+                <img src="https://i.imgur.com/S3FBo0I.png" alt="Themis">
                 Themis
             </div>
 
