fix themis logo *again* (this time in admin.html)

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -630,7 +630,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="https://cdn.discordapp.com/attachments/1359093144376840212/1391111028552765550/image.png?ex=686ab49a&is=6869631a&hm=5baa63756943b25cb072d90f4a771d19def015607ce11f8e0bc7d4e4265bc339&" alt="Themis">
+                <img src="https://i.imgur.com/S3FBo0I.png" alt="Themis">
                 Themis Admin
             </div>
 
